maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:17: error: method testg has return statement; needs result type
	return rep
        ^