maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
def keepHandOnSideWall() = { 
	gauche()
	while (estFaceMur()) {
		droite()
		
	} 
	avance()
		
}
def testg() = {
	var rep = false 
	gauche() 
	rep = estFaceMur()
	droite()
	return rep
}
def chercheMur() = {
	if (estFaceMur()) {
		droite()
	} else {
		avance()
	}
}

while (!testg()) {
	chercheMur()
}

 do { keepHandOnSideWall()
 }
  while (!estSurBiscuit())
prendBiscuit()
}
